--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,10 +3,49 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100%;
-    margin-top: 10px;
+    height: auto;
 }
 
 h1{
     text-align: center;
+}
+
+.navbar{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(12, 136, 224);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbarButtons{
+    border: none;
+    font-size: 18px;
+    width: 100px;
+    height: 50px;
+    background-color: rgb(12, 136, 224);
+}
+
+.navbarButtons:focus{
+    border: none;
+    outline: none;
+}
+
+.navbarLinksSection{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:10px;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .navbar{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
