--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,8 @@ a:hover {
 
 body {
   margin: 0;
-  height: 120vh;
+  padding: 0;
+  height: 130vh;
 }
 
 h1 {
@@ -33,7 +34,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -50,7 +51,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
