Trying to figure out how to map the images and the names

--- a/src/styles/Collections.css
+++ b/src/styles/Collections.css
@@ -5,12 +5,17 @@
     gap:10px;
 }
 
-.containers{
+.collections{
     display: flex;
     flex-direction: column;
 }
 
-.innerContainer{
+.innerCollections{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+}
+
+.individualCollections{
+    display: flex;
+    justify-content: center;
 }
