--- a/src/styles/Collections.css
+++ b/src/styles/Collections.css
@@ -2,5 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:10px;
+    gap:50px;
 }
+
+.imageContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
