Minor styling changes

--- a/src/styles/Collections.css
+++ b/src/styles/Collections.css
@@ -7,7 +7,7 @@
 
 .imageContainerWrap{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     gap:30px;
 }
