--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -18,6 +18,7 @@ h1{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    color:white;
 }
 
 .navbarProfileSection{
