--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -34,6 +34,7 @@ h1{
     background-color: rgb(12, 136, 224);
     cursor: pointer;
     margin-right: 10px;
+    color:white;
 }
 
 .navbarButtons:focus{
